# firmware

./: .gitignore  CLAUDE.md  README.md  TODO.md  build.gradle.kts  local.properties  settings.gradle.kts
agent/: UNSTABLE.md  build.gradle.kts  settings.gradle.kts
agent-rs/: Cargo.toml
agent-rs/src/: agent.rs  api.rs  config.rs  device.rs  events.rs  executor.rs  main.rs  models.rs  overlay.rs  protocol.rs  telemetry.rs  ws.rs
agent-rs/src/state/: bridge.rs  connection.rs  mesh.rs  mod.rs  overlay.rs  wifi.rs
app/: build.gradle.kts
core/: build.gradle.kts
docs/: management-plane.md
firmware/configs/: network.bridge
firmware/init.d/: bridgebox-management  bridgebox-wifi-client
firmware/scripts/: bootstrap.sh  healthcheck.sh  setup-bridge.sh  setup-tailscale.sh  setup-wifi-client.sh  watchdog.sh
imagebuilder/: .gitignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh
imagebuilder/files/etc/board.d/: 02_network
imagebuilder/files/etc/bridgebox/: backend-url  box-id  headscale-url
imagebuilder/files/etc/config/: network
imagebuilder/files/etc/crontabs/: root
imagebuilder/files/etc/docker/: daemon.json
imagebuilder/files/www/: index.html
imagebuilder/profiles/: r2s.mk  r3s.mk
imagebuilder/scripts/: build.sh  gen-batch.sh  inject-identity.sh  smoke-test.sh
imagebuilder/test/: Dockerfile  run-tests.sh
imagebuilder/test/mock/: bb-agent  dnsmasq  hostapd  ip  iw  logger  tailscale  uci  udhcpc  wpa_supplicant
imagebuilder/test/qemu/: Dockerfile  boot-test.sh
imagebuilder/test/qemu-dev/: Dockerfile  build-binaries.sh  entrypoint.sh
(+66 files in other folders)
