[package]
name = "bb-agent"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "macros", "net", "time", "signal", "fs", "io-util", "sync", "process"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
axum = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
